--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             <section id="hero" class=" md:flex sm:px-10 relative">
                 <article class="w-full flex flex-col items-center">
                     <h2 class="max-w-md font-poppins text-5xl font-bold text-center md:text-5xl md:text-start text-slate-800 dark:text-white">
-                    We are <span class="italic text-yellow-600">Freelancer</span>, We work on digital marketing.
+                    We are <span class="italic text-yellow-600">Freelancers</span>, We work on digital marketing.
                     </h2>
-                    <h2 class="max-w-md font-poppins text-3xl mt-4 text-center md:text-left text-gray-50 dark:text-slate-400">Boost Your Buisness with stuning websites in afordable price. </h2>
-                    <h3 class="max-w-md text-2xl mt-4 text-center md:text-left text-amber-200 dark:text-slate-400">আজিৰ দিনত ডিজিতেল ৰ্মাকেটিং মানেই সফলতা ।</h3>
+                    <h2 class="max-w-md font-poppins text-2xl mt-4 text-center md:text-left text-gray-200 dark:text-slate-400">Boost Your Buisness with stuning websites in afordable price. </h2>
+                    <h3 class="max-w-md text-xl font-bold mt-4 text-center md:text-left text-sky-700 dark:text-slate-400">আজিৰ দিনত ডিজিতেল ৰ্মাকেটিং মানেই সফলতা ।</h3>
                 </article>
                 <img id="hero" class="object-cover w-full pl-6" src="./build/img/27.svg"  alt="" srcset="">
     
@@ -122,7 +122,7 @@
             <div class=" px-3 grid grid-cols-2 lg:grid-cols-4 sm:grid-cols-2 gap-3">
                 <div class="bg-yellow-200 shadow-md text-center px-2 py-2 group hover:bg-opacity-70 rounded-lg cursor-pointer duration-300">
                     <div class="py-6">
-                        <img class="w-8 group-hover:bg-opacity-70 mx-auto animate-bounce pb-4  " src="./img/web-img.png"  alt="">
+                        <img class="w-8 group-hover:bg-opacity-70 mx-auto animate-bounce pb-4  " src="./build/img/web-img.png"  alt="">
                         <h3 class="text-base text-yellow-900 group-hover:bg-opacity-70 font-semibold"> WEBSITE DESIGN</h3>
                     </div>
                 </div>
