--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
             <div class="text-center">
                 <h1 class="text-xl font-medium font-poppins">
-                    <a href="#">🚀 DIGITAL<span class="text-[#ccff1a]">SOLUTION</span> </a>
+                    <a href="https://resume-utpal.netlify.app">🚀 DIGITAL<span class="text-[#ccff1a]">SOLUTION</span> </a>
                 </h1>
                 <!-- <span class="text-sm text-slate-300 font-poppins font-semibold ">DHEMAJI</span> -->
             </div>
@@ -408,7 +408,7 @@
                                 <ul class="flex flex-col justify-center items-center text-gray-200 text-lg">
                                     <li><a href="#">Services</a></li>
                                     <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Hire Me</a></li>
+                                    <li><a href="https://resume-utpal.netlify.app">Hire Me</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                     
                                 </ul>
