--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="bg-blue-700 text-blue-50 sticky top-0 z-10 drop-shadow">
         <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
             <div class="text-center">
-                <h1 class="text-xl font-medium font-poppins">
+                <h1 class="text-2xl font-medium font-poppins">
                     <a href="https://resume-utpal.netlify.app">🚀 DIGITAL<span class="text-[#ccff1a]">SOLUTION</span> </a>
                 </h1>
                 <!-- <span class="text-sm text-slate-300 font-poppins font-semibold ">DHEMAJI</span> -->
@@ -120,7 +120,7 @@
         <section> 
             <h2 class="text-2xl mt-20 mb-14 text-center bg-gradient-to-tr from-red-500 to-orange-500 bg-clip-text text-transparent font-medium"> OUR SERVICES</h2>
             <div class=" px-3 grid grid-cols-2 lg:grid-cols-4 sm:grid-cols-2 gap-3">
-                <div class="bg-yellow-200 shadow-md text-center px-2 py-2 group hover:bg-opacity-70 rounded-lg cursor-pointer duration-300">
+                <div class="bg-yellow-200 shadow-md text-center px-2 py-3 group hover:bg-opacity-70 rounded-lg cursor-pointer duration-300">
                     <div class="py-6">
                         <img class="w-8 group-hover:bg-opacity-70 mx-auto animate-bounce pb-4  " src="./build/img/web-img.png"  alt="">
                         <h3 class="text-base text-yellow-900 group-hover:bg-opacity-70 font-semibold"> WEBSITE DESIGN</h3>
@@ -253,7 +253,7 @@
             
 
 
-            <div class=" px-3 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-4  gap-3 uppercase mt-8 mb-20">
+            <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-4  gap-4 uppercase mt-8 mb-20">
                 <div class="col-span-2 row-span-3">
                     <img src="./build/img/76.svg" class="object-cover" alt="">
                 </div>
